--- a/src/view/BehaviorAdvancedControlPanel.mxml
+++ b/src/view/BehaviorAdvancedControlPanel.mxml
@@ -117,7 +117,7 @@
 	<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
 		<s:VGroup width="100%" gap="0" paddingLeft="6" paddingRight="6">
 			<s:Label width="100%" height="24" verticalAlign="bottom"
-					 text="{resourceManager.getString('resources','totalTimes')}"
+					 text="{resourceManager.getString('resources','totalTime')}"
 					 />
 			<s:HGroup width="100%" verticalAlign="middle">
 				<s:HSlider id="sliderDurationTween" width="100%"
@@ -128,7 +128,7 @@
 								  />
 			</s:HGroup>
 			<s:Label width="100%" height="24" verticalAlign="bottom"
-					 text="{resourceManager.getString('resources','blendingTimes')}"
+					 text="{resourceManager.getString('resources','blendingTime')}"
 					 />
 			<s:HGroup width="100%" verticalAlign="middle">
 				<s:HSlider id="sliderDurationTo" width="100%"
