--- a/src/view/ImportWindow.mxml
+++ b/src/view/ImportWindow.mxml
@@ -12,19 +12,23 @@
 			import message.Message;
 			import message.MessageDispatcher;
 			
-			import model.SettingDataProxy;
 			import model.ImportDataProxy;
+			import model.SettingDataProxy;
 			
 			import mx.events.CloseEvent;
+			import mx.events.FlexEvent;
 			import mx.managers.PopUpManager;
 			
 			private function importData():void
 			{
+				DBGATrackerManager.tracker.trackEvent("importWindow", "import", "dataSource", SettingDataProxy.getInstance().dataImportID);
+				
 				MessageDispatcher.addEventListener(MessageDispatcher.LOAD_FLADATA, commandHandler);
 				MessageDispatcher.addEventListener(MessageDispatcher.LOAD_FILEDATA, commandHandler);
 				switch(SettingDataProxy.getInstance().dataImportID)
 				{
 					case 0:
+						
 						ImportCommand.instance.importFLAData(false, false);
 						break;
 					case 1:
@@ -43,10 +47,20 @@
 			
 			private function closeWindow():void
 			{
+				
+				DBGATrackerManager.tracker.trackPageview("/");
+				
 				MessageDispatcher.removeEventListener(MessageDispatcher.LOAD_FLADATA, commandHandler);
 				MessageDispatcher.removeEventListener(MessageDispatcher.LOAD_FILEDATA, commandHandler);
 				PopUpManager.removePopUp(this);
 			}
+			
+			private function closeBtn_onClick(event:MouseEvent):void
+			{
+				DBGATrackerManager.tracker.trackEvent("importWindow", "close");
+				closeWindow();
+			}
+			
 		]]>
 	</fx:Script>
 
@@ -104,7 +118,7 @@
 				  />
 		<s:Button width="100" height="24" cornerRadius="0"
 				  label="{resourceManager.getString('resources','cancel')}"
-				  click="closeWindow()"
+				  click="closeBtn_onClick(event)"
 				  />
 	</s:HGroup>
 
